--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/style.css" />
+    <!--This shows exactly when the start time is so you can define how long it took to process-->
+    <script>console.time('react-app')</script>
   </head>
 
   <body>
@@ -42,12 +44,7 @@
     </div>
 
     <div id="comment-box"></div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-    <script type="text/babel" src="assets/components.js"></script>
+    <script src="assets/js/bundle.js"></script>
   </body>
 
 </html>
